# AdvancedBoy

./: .gitignore  CMakeLists.txt  README.md
GBA/: CMakeLists.txt
GBA/include/: GameBoyAdvance.hpp  Types.hpp
GBA/include/APU/: APU.hpp  Channel1.hpp  Channel2.hpp  Channel3.hpp  Channel4.hpp  Constants.hpp  DmaAudio.hpp  Registers.hpp
GBA/include/BIOS/: BIOSManager.hpp
GBA/include/CPU/: ARM.hpp  ARM7TDMI.hpp  ArmDisassembler.hpp  ArmInstructions.hpp  CpuTypes.hpp  Registers.hpp  THUMB.hpp  ThumbDisassembler.hpp  ThumbInstructions.hpp
GBA/include/Cartridge/: BackupMedia.hpp  EEPROM.hpp  Flash.hpp  GamePak.hpp  SRAM.hpp
GBA/include/DMA/: DmaChannel.hpp  DmaManager.hpp
GBA/include/Debug/: APUDebugger.hpp  ArmDisassembler.hpp  CPUDebugger.hpp  DebugTypes.hpp  GameBoyAdvanceDebugger.hpp  PPUDebugger.hpp  SystemControlDebugger.hpp  ThumbDisassembler.hpp
GBA/include/Keypad/: Keypad.hpp  Registers.hpp
GBA/include/Logging/: Logger.hpp
GBA/include/Memory/: Bus.hpp  EWRAM.hpp  IWRAM.hpp  MemoryComponentBase.hpp  MemoryMap.hpp  RegisterComponentBase.hpp
GBA/include/PPU/: Debug.hpp  FrameBuffer.hpp  PPU.hpp  Registers.hpp  VramViews.hpp
GBA/include/System/: ClockManager.hpp  EventScheduler.hpp  SystemControl.hpp
GBA/include/Timers/: Timer.hpp  TimerManager.hpp
GBA/include/Types/: DebugTypes.hpp
GBA/src/: CMakeLists.txt  GameBoyAdvance.cpp
GBA/src/APU/: APU.cpp  CMakeLists.txt  Channel1.cpp  Channel2.cpp  Channel3.cpp  Channel4.cpp  DmaAudio.cpp
GBA/src/BIOS/: BIOSManager.cpp  CMakeLists.txt
GBA/src/CPU/: ARM.cpp  ARM7TDMI.cpp  ArmDisassembler.cpp  ArmInstructions.cpp  CMakeLists.txt  Registers.cpp  THUMB.cpp  ThumbDisassembler.cpp  ThumbInstructions.cpp
GBA/src/Cartridge/: CMakeLists.txt  EEPROM.cpp  Flash.cpp  GamePak.cpp  SRAM.cpp
GBA/src/DMA/: CMakeLists.txt  DmaChannel.cpp  DmaManager.cpp
GBA/src/Debug/: APUDebugger.cpp  ArmDisassembler.cpp  CMakeLists.txt  CPUDebugger.cpp  GameBoyAdvanceDebugger.cpp  PPUDebugger.cpp  SystemControlDebugger.cpp  ThumbDisassembler.cpp
GBA/src/Keypad/: CMakeLists.txt  Keypad.cpp
GBA/src/Logging/: ArmLogging.cpp  CMakeLists.txt  Logger.cpp  ThumbLogging.cpp
GBA/src/Memory/: Bus.cpp  CMakeLists.txt  EWRAM.cpp  IWRAM.cpp
GBA/src/PPU/: CMakeLists.txt  FrameBuffer.cpp  PPU.cpp  PPU_Debug.cpp  VramViews.cpp
GBA/src/System/: CMakeLists.txt  EventScheduler.cpp  SystemControl.cpp
GBA/src/Timers/: CMakeLists.txt  Timer.cpp  TimerManager.cpp
GBA/src/Utilities/: CMakeLists.txt  CommonUtils.cpp
GUI/: CMakeLists.txt
GUI/include/: BackgroundViewer.hpp  Bindings.hpp  CMakeLists.txt  CpuDebugger.hpp  EmuThread.hpp  FlowLayout.hpp  GBA.hpp  GamepadListener.hpp  LCD.hpp  MainWindow.hpp  PersistentData.hpp
GUI/src/: BackgroundViewer.cpp  Bindings.cpp  CMakeLists.txt  CpuDebugger.cpp  EmuThread.cpp  FlowLayout.cpp  GBA.cpp  GamepadListener.cpp  LCD.cpp  MainWindow.cpp  PersistentData.cpp  main.cpp
(+38 files in other folders)
